bindings/php/sone.h

/* Generated from include/sone.h by tools/generate-header.php — do not edit. */

/* Generated by cbindgen — do not edit. Run `cargo run -p sone-ffi --features generate-header --bin sone-header`. */

/**
 * Result codes. Mirrors the CLI's exit codes.
 */
typedef enum {
  /**
   * The call succeeded.
   */
  SoneStatus_Ok = 0,
  /**
   * A null pointer or invalid UTF-8 was passed in.
   */
  SoneStatus_InvalidArgument = 1,
  /**
   * The IR document could not be parsed.
   */
  SoneStatus_IrError = 2,
  /**
   * An image or font could not be loaded.
   */
  SoneStatus_AssetError = 3,
  /**
   * Layout or rasterization failed.
   */
  SoneStatus_RenderError = 4,
} SoneStatus;

/**
 * Output formats accepted by `sone_render`.
 */
typedef enum {
  SoneFormat_Png = 0,
  SoneFormat_Jpeg = 1,
  SoneFormat_Webp = 2,
  SoneFormat_Raw = 3,
  SoneFormat_Pdf = 4,
  SoneFormat_Svg = 5,
} SoneFormat;

/**
 * Opaque engine handle: owns the font registry and the asset cache.
 */
typedef struct SoneEngine SoneEngine;

/**
 * Render options. Zero-initialize and set what you need; `density` and
 * `quality` fall back to 1.0 when left at 0.
 */
typedef struct {
  SoneFormat format;
  /**
   * Raster scale factor. 0 means "use the document's `config.density`".
   */
  float density;
  /**
   * JPEG/WebP quality, 0..1. 0 means 1.0.
   */
  float quality;
  /**
   * Non-zero rejects unknown IR fields.
   */
  int strict;
} SoneRenderOptions;

/**
 * An owned byte buffer. Release with `sone_buffer_free`.
 */
typedef struct {
  uint8_t *data;
  uintptr_t len;
  uintptr_t capacity;
} SoneBuffer;

/**
 * A list of owned byte buffers — one per page. Release the whole list with
 * `sone_buffer_list_free`; the individual buffers must not be freed.
 */
typedef struct {
  SoneBuffer *items;
  uintptr_t len;
  uintptr_t capacity;
} SoneBufferList;

/**
 * Create an engine. `base_dir` is the directory relative asset paths resolve
 * against; pass NULL for the process working directory.
 *
 * # Safety
 * `base_dir` must be NULL or a valid NUL-terminated UTF-8 string.
 */
SoneEngine *sone_engine_new(const char *base_dir);

/**
 * Release an engine and everything it owns.
 *
 * # Safety
 * `engine` must come from `sone_engine_new` and must not be used afterwards.
 */
void sone_engine_free(SoneEngine *engine);

/**
 * The last error message, or NULL if the previous call succeeded. The string
 * stays valid until the next call on this engine.
 *
 * # Safety
 * `engine` must be a live handle.
 */
const char *sone_engine_last_error(const SoneEngine *engine);

/**
 * Register a font family from raw TTF/OTF bytes.
 *
 * # Safety
 * `engine` must be live, `name` a valid UTF-8 C string, and `data`/`len` a
 * readable byte range.
 */
SoneStatus sone_register_font(SoneEngine *engine,
                              const char *name,
                              const uint8_t *data,
                              uintptr_t len);

/**
 * Register image bytes under `asset:<name>`, for callers with no filesystem.
 *
 * # Safety
 * Same requirements as `sone_register_font`.
 */
SoneStatus sone_register_image(SoneEngine *engine,
                               const char *name,
                               const uint8_t *data,
                               uintptr_t len);

/**
 * Render an IR document to bytes. On success `out` owns a buffer the caller
 * must release with `sone_buffer_free`.
 *
 * # Safety
 * `engine` must be live, `json` a valid UTF-8 C string, and `out` writable.
 */
SoneStatus sone_render_json(SoneEngine *engine,
                            const char *json,
                            SoneRenderOptions options,
                            SoneBuffer *out);

/**
 * Register a font family from a file on disk. `path` is used as given, so
 * relative paths resolve against the process working directory, not the
 * engine's `base_dir`.
 *
 * # Safety
 * `engine` must be live, and `name`/`path` valid NUL-terminated UTF-8 strings.
 */
SoneStatus sone_register_font_file(SoneEngine *engine, const char *name, const char *path);

/**
 * Whether a family has been registered. False for a null handle or name.
 *
 * # Safety
 * `engine` must be live and `name` a valid NUL-terminated UTF-8 string.
 */
bool sone_has_font(const SoneEngine *engine, const char *name);

/**
 * Every registered family name, written to `out` as a UTF-8 JSON array of
 * strings. Release `out` with `sone_buffer_free`.
 *
 * # Safety
 * `engine` must be live and `out` writable.
 */
SoneStatus sone_font_families(const SoneEngine *engine, SoneBuffer *out);

/**
 * Drop every registered font and the shaping caches that depend on them.
 *
 * # Safety
 * `engine` must be live.
 */
void sone_reset_fonts(SoneEngine *engine);

/**
 * Render one raster image per page. Requires `config.pageHeight` in the
 * document; without it the result is a single page. On success `out` owns a
 * list the caller must release with `sone_buffer_list_free`.
 *
 * # Safety
 * `engine` must be live, `json` a valid UTF-8 C string, and `out` writable.
 */
SoneStatus sone_render_pages(SoneEngine *engine,
                             const char *json,
                             SoneRenderOptions options,
                             SoneBufferList *out);

/**
 * The computed layout tree, written to `out` as UTF-8 JSON. Release with
 * `sone_buffer_free`.
 *
 * # Safety
 * `engine` must be live, `json` a valid UTF-8 C string, and `out` writable.
 */
SoneStatus sone_dump_layout(SoneEngine *engine, const char *json, SoneBuffer *out);

/**
 * Dataset-style metadata, written to `out` as UTF-8 JSON. `granularity` is
 * `"node"`, `"line"` or `"word"`; NULL means `"node"`. Release with
 * `sone_buffer_free`.
 *
 * # Safety
 * `engine` must be live, `json` a valid UTF-8 C string, `granularity` NULL or
 * a valid UTF-8 C string, and `out` writable.
 */
SoneStatus sone_dump_metadata(SoneEngine *engine,
                              const char *json,
                              const char *granularity,
                              SoneBuffer *out);

/**
 * Release a buffer list returned by the library, and every buffer in it.
 *
 * # Safety
 * `list` must be a list this library produced and not already freed.
 */
void sone_buffer_list_free(SoneBufferList *list);

/**
 * Release a buffer returned by the library.
 *
 * # Safety
 * `buffer` must be a buffer this library produced and not already freed.
 */
void sone_buffer_free(SoneBuffer *buffer);

/**
 * Library version, as a static NUL-terminated string.
 */
const char *sone_version(void);